--- a/src/components/Day/Reminder/index.scss
+++ b/src/components/Day/Reminder/index.scss
@@ -4,6 +4,8 @@
   font-size: 12px;
   padding: 3px 5px;
   margin-bottom: 3px;
+  border-radius: 3px;
+  box-shadow: rgba(0, 0, 0, 0.075) 0px 1px 4px 2px, rgba(0, 0, 0, 0.07) 0px 12px 6px -1px, rgba(0, 0, 0, 0.17) 0px 9px 17px 2px;
 
   &:hover {
     .tools {
