--- a/src/components/Day/index.scss
+++ b/src/components/Day/index.scss
@@ -39,7 +39,7 @@ $day-width: 14.28%; // 100 / 7 = 14.28
       color: rgba(0, 0, 0, 0.4);
 
       &:hover {
-        color: #000;
+        color: #ffffff;
       }
     }
   }
